[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/components/SkillRow.gd" id="1_0"]
[ext_resource type="Theme" path="res://themes/bg3_theme.tres" id="2_0"]

[node name="SkillRow" type="HBoxContainer"]
theme = ExtResource("2_0")
script = ExtResource("1_0")

[node name="ProficiencyCheck" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(20, 0)
disabled = true

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Acrobatics"
horizontal_alignment = 0

[node name="ValueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
theme_override_font_sizes/font_size = 16
text = "+2"
horizontal_alignment = 2

